# Vizualizer

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  demo.md
examples/: Sample_data.xlsx  sample_inventory.xlsx  sample_sales.csv
src/: main.rs
src/connectors/: excel.rs
src/core/: data.rs  mod.rs  workbook.rs
src/query/: engine.rs  model.rs
src/storage/: project.rs
src/ui/: mod.rs
src/viz/: mod.rs
